tests/ui/asm/arm/exhausted-registers-issue-90815.stderr
error: inline assembly requires more registers than available
  --> $DIR/exhausted-registers-issue-90815.rs:37:5
   |
LL |       asm!(
   |  _____^
LL | |         //~^ ERROR inline assembly requires more registers than available
LL | |         "mov {0}, r0",
...  |
LL | |         out(reg) r15,
LL | |     );
   | |_____^

error: aborting due to 1 previous error

